APB-671 adjust typescript for app2 and common.js part 1, uses substring for tab_nav clicks, replaces parentElement with parentNode in app_event_click, replaces setYear with setFullyear, sets default in APP_GLOBAL to 0, removes APP_GLOBAL.timetable_type in init_app, simplifies common_user_verify_verification_char event clicks in app1 and app2, removes COMMON_GLOBAL.ui in common.js, replaces get_null_or_value with ?? '', adds type for parameters in init_app in admin, app1 and app2, adds dialogue_close to user_login, corrects app_event_keyup event name in app2, sets zoom_info and move_info default null, uses break in lov_keys and search_input, sets json_data default null in FFB

--- a/apps/common/public/css/common_app.css
+++ b/apps/common/public/css/common_app.css
@@ -394,6 +394,7 @@ select {
 .common_dialogue_close{
 	animation-name: common_roadRunnerOut;
 	animation-duration: 0.4s;
+	background-color: unset;
 }
 
 /* add animation effects */
